Update postman collections, update swagger docs
