# docs/swagger.json
@@ -12,11 +12,11 @@
         },
         "version": "2.0"
     },
-    "host": "localhost:3000",
+    "host": "localhost:8626",
     "basePath": "/",
     "paths": {
         "/auth/v1/i": {
-            "post": {
+            "get": {
                 "description": "Get login",
                 "produces": [
                     "application/json"
@@ -33,8 +33,8 @@
                             "type": "string"
                         }
                     },
-                    "401": {
-                        "description": "Unauthorized",
+                    "403": {
+                        "description": "Forbidden",
                         "schema": {
                             "$ref": "#/definitions/handler.ErrorResponse"
                         }
